Fixing contrast on object page

--- a/guide/static/guide/css/main.css
+++ b/guide/static/guide/css/main.css
@@ -457,7 +457,7 @@ ul.menu
 }
 .object-photos
 {
-  background-color: #777;
+  background-color: #595959;
 }
 
 .object-display>div
